# normal-form

./: Draft.py  README.md  pyproject.toml
normalize/: __init__.py  extract_to_int.py  normal_form_core.py  process_to_int
